Fix: pdf generating table size not fitting on one page Fix: print modal not fitting with too many presets Feat: New colour scheme for print modal Version bump: 3.4.0

--- a/css/modal.css
+++ b/css/modal.css
@@ -23,6 +23,7 @@
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  height: 80%;
 }
 
 /* The Close Button */
@@ -43,12 +44,18 @@
 #modal-rows {
   display: flex;
   flex-direction: column;
-
+  overflow-y: scroll;
+  overflow-x: hidden;
+  margin-top: 5px;
 }
 
 .modal-row {
   display: flex;
   flex-direction: row;
+  background-color: #cccccc;
+  border: 1px solid #333333;
+  padding: 1px;
+  margin-bottom: 2px;
 }
 
 .modal-row > label {
